Removed dependency on commons-codec