@@ -32,11 +32,11 @@ import io.fabric8.docker.dsl.image.RedirectingWritingOutputTagForceToRegistryInt
 import io.fabric8.docker.dsl.image.TagForceToRegistryInterface;
 import io.fabric8.docker.dsl.image.ToRegistryInterface;
 import io.fabric8.docker.dsl.image.UsingListenerRedirectingWritingOutputTagForceToRegistryInterface;
-import org.apache.commons.codec.binary.Base64;
 
 import java.io.OutputStream;
 import java.io.PipedOutputStream;
 import java.util.concurrent.TimeUnit;
+import javax.xml.bind.DatatypeConverter;
 
 public class PushImage extends BaseImageOperation implements
         UsingListenerRedirectingWritingOutputTagForceToRegistryInterface<OutputHandle>,
@@ -77,7 +77,7 @@ public class PushImage extends BaseImageOperation implements
             AuthConfig authConfig = RegistryUtils.getConfigForImage(name, config);
             RequestBody body = RequestBody.create(MEDIA_TYPE_JSON, "{}");
             Request request = new Request.Builder()
-                    .header("X-Registry-Auth", new String(Base64.encodeBase64(JSON_MAPPER.writeValueAsString(authConfig != null ? authConfig : new AuthConfig()).getBytes("UTF-8")), "UTF-8"))
+                    .header("X-Registry-Auth", DatatypeConverter.printBase64Binary(JSON_MAPPER.writeValueAsString(authConfig != null ? authConfig : new AuthConfig()).getBytes("UTF-8")))
                     .post(body)
                     .url(sb.toString()).build();
 
